test/spec_vectors/local_tee/fail/module_6.wat
(module (func $type-local-arg-num-vs-num (local f32) (local.tee 0 (f64.const 0))))